k8s/apps/app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: "service-app1"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "app1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "app1"
spec:
  selector:
    matchLabels:
      app: app1
  replicas: 2
  template:
    metadata:
      labels:
        app: "app1"
    spec:
      containers:
      - image: httpd:2.4
        imagePullPolicy: Always
        name: "app"
        ports:
        - containerPort: 80
