k8s/apps/app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: "service-app2"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "app2"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "app2"
spec:
  selector:
    matchLabels:
      app: app2
  replicas: 2
  template:
    metadata:
      labels:
        app: "app2"
    spec:
      containers:
      - image: nginx:1.13
        imagePullPolicy: Always
        name: "app"
        ports:
        - containerPort: 80
