k8s/apps/app3.yaml
apiVersion: v1
kind: Service
metadata:
  name: "service-app3"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "app3"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "app3"
spec:
  selector:
    matchLabels:
      app: app3
  replicas: 1
  template:
    metadata:
      labels:
        app: "app3"
    spec:
      containers:
      - image: containous/whoami
        imagePullPolicy: Always
        name: "app"
        ports:
        - containerPort: 80
